--- a/css/style.css
+++ b/css/style.css
@@ -329,3 +329,211 @@ header .right-block .social-icons div:hover a {
     margin-bottom: 20px;
   }
 }
+
+.aquamarine-hotel {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.aquamarine-hotel__about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.aquamarine-hotel__about h1 {
+  margin: 0;
+  font-family: Trebuchet;
+  font-size: 35px;
+  font-weight: 700;
+  border-bottom: 1px solid #000;
+}
+
+.aquamarine-hotel__about .stars {
+  margin: 0 30px;
+}
+
+.aquamarine-hotel__about .hotel-price {
+  border-bottom: none;
+}
+
+.aquamarine-hotel__ratings {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 23px;
+}
+
+.aquamarine-hotel__ratings div {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.aquamarine-hotel__ratings .rating-respond {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.aquamarine-hotel__ratings .rating-respond a {
+  color: #777777;
+}
+
+.aquamarine-hotel__ratings .total-rating {
+  width: 51px;
+  height: 51px;
+  background: #00bff3;
+  border-radius: 3px;
+  margin: 0 30px;
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: Trebuchet;
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.aquamarine-hotel__ratings .hotel__rating {
+  margin-right: 20px;
+}
+
+.aquamarine-hotel__ratings .hotel__rating span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #777777;
+  text-transform: uppercase;
+}
+
+.aquamarine-hotel__ratings .hotel__rating .rating {
+  font-size: 18px;
+  color: #000;
+}
+
+.days-amount__block {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-transform: translateY(-20px);
+  transform: translateY(-20px);
+}
+
+.days-amount__block span {
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.days-amount__block .days-amount {
+  font-family: Trebuchet;
+  font-size: 100px;
+  font-weight: 400;
+  color: #777777;
+}
+
+@media only screen and (max-width: 1199px) {
+  .days-amount__block {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  .days-amount__block span {
+    font-size: 24px;
+  }
+  .days-amount__block .days-amount {
+    font-size: 80px;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .days-amount__block {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .aquamarine-hotel {
+    margin-top: 20px;
+  }
+  .aquamarine-hotel__about h1 {
+    font-size: 30px;
+  }
+  .aquamarine-hotel__ratings {
+    margin-top: 20px;
+  }
+  .aquamarine-hotel__ratings .total-rating {
+    width: 45px;
+    height: 45px;
+    margin: 0 20px;
+    font-size: 20px;
+  }
+  .aquamarine-hotel__ratings .hotel__rating {
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 567px) {
+  .aquamarine-hotel {
+    margin-top: 10px;
+  }
+  .aquamarine-hotel__about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .aquamarine-hotel__about h1 {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+  .aquamarine-hotel__about .stars {
+    margin-top: 10px;
+  }
+  .aquamarine-hotel__ratings {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+  .aquamarine-hotel__ratings .total-rating {
+    margin: 0 75px;
+  }
+  .aquamarine-hotel__ratings .hotel__rating {
+    margin-right: 10px;
+    margin-top: 10px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
