Add Section Hotel-Aquamarine. Mod_02

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
   flex-direction: column;
 }
 
+.container {
+  padding: 0;
+}
+
 header {
   width: 100%;
   background: #00bff3;
@@ -131,6 +135,9 @@ header .right-block .social-icons div:hover a {
 }
 
 @media only screen and (max-width: 991px) {
+  .container {
+    padding: 0 15px;
+  }
   header {
     width: 100%;
     background: #00bff3;
@@ -239,6 +246,10 @@ header .right-block .social-icons div:hover a {
   }
 }
 
+.section-banner .container {
+  padding: 0 15px;
+}
+
 .banner-block {
   background: url(../img/banner.png) no-repeat center/cover;
 }
@@ -297,6 +308,9 @@ header .right-block .social-icons div:hover a {
 }
 
 @media only screen and (max-width: 991px) {
+  .section-banner .container {
+    padding: 0 30px;
+  }
   .banner-block .plashka {
     margin-top: 125px;
   }
@@ -356,7 +370,7 @@ header .right-block .social-icons div:hover a {
   font-family: Trebuchet;
   font-size: 35px;
   font-weight: 700;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #7f7f7f;
 }
 
 .aquamarine-hotel__about .stars {
@@ -462,7 +476,109 @@ header .right-block .social-icons div:hover a {
   color: #777777;
 }
 
+.extrim {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.extrim .extrim-block {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.extrim .extrim-block img {
+  width: 99%;
+}
+
+.extrim .extrim-block .extrim-block__about {
+  width: 99%;
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.extrim .extrim-block .extrim-block__about .extrim-titile h1 {
+  font-family: Trebuchet;
+  font-size: 30px;
+  font-weight: 700;
+  margin: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.extrim .extrim-block .extrim-block__about .extrim-titile span {
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #777;
+}
+
+.extrim .extrim-block .extrim-block__about .extrim-price {
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  margin-top: -30px;
+}
+
+.extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_now {
+  font-family: Trebuchet;
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_was {
+  font-family: Trebuchet;
+  font-size: 20px;
+  font-weight: 400;
+  color: #777;
+  text-decoration: line-through;
+  -webkit-text-decoration-color: red;
+  text-decoration-color: red;
+  margin-top: -15px;
+}
+
+.extrim .extrim-block_01 {
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  padding-left: 0;
+}
+
+.extrim .extrim-block_02 {
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  padding-right: 0;
+}
+
 @media only screen and (max-width: 1199px) {
+  .row {
+    margin: 0;
+  }
   .days-amount__block {
     -webkit-transform: translateY(-30px);
     transform: translateY(-30px);
@@ -473,15 +589,47 @@ header .right-block .social-icons div:hover a {
   .days-amount__block .days-amount {
     font-size: 80px;
   }
+  .extrim .extrim-block_01 {
+    padding-left: 15px;
+  }
+  .extrim .extrim-block_02 {
+    padding-right: 15px;
+  }
 }
 
 @media only screen and (max-width: 991px) {
   .days-amount__block {
     display: none;
   }
+  .extrim {
+    margin-top: 20px;
+  }
+  .extrim .extrim-block img {
+    width: 100%;
+  }
+  .extrim .extrim-block .extrim-block__about {
+    width: 100%;
+    margin-top: 15px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-titile h1 {
+    font-size: 20px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-titile span {
+    font-size: 12px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price {
+    margin-top: -15px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_now {
+    font-size: 30px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_was {
+    font-size: 15px;
+    margin-top: -10px;
+  }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   .aquamarine-hotel {
     margin-top: 20px;
   }
@@ -499,6 +647,14 @@ header .right-block .social-icons div:hover a {
   }
   .aquamarine-hotel__ratings .hotel__rating {
     margin-right: 10px;
+  }
+  .extrim {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-top: 0;
+  }
+  .extrim .extrim-block {
+    margin-top: 20px;
   }
 }
 
@@ -527,7 +683,7 @@ header .right-block .social-icons div:hover a {
     margin-top: 20px;
   }
   .aquamarine-hotel__ratings .total-rating {
-    margin: 0 75px;
+    margin: 0 50px;
   }
   .aquamarine-hotel__ratings .hotel__rating {
     margin-right: 10px;
@@ -535,5 +691,21 @@ header .right-block .social-icons div:hover a {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+  }
+  .extrim .extrim-block .extrim-block__about {
+    margin-top: 10px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-titile h1 {
+    font-size: 17px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price {
+    margin-top: -10px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_now {
+    font-size: 24px;
+  }
+  .extrim .extrim-block .extrim-block__about .extrim-price .extrim-price_was {
+    font-size: 12px;
+    margin-top: -7px;
   }
 }
